Update Cargo.toml (add more metadata)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,18 @@
 name = "htmldiff"
 version = "0.1.0"
 authors = ["Seiichi KONDO <kondo.seikichi@gmail.com>"]
+description = """
+htmldiff is a Rust port of https://github.com/myobie/htmldiff
+"""
+documentation = "https://github.com/seikichi/htmldiff"
+homepage = "https://github.com/seikichi/htmldiff"
+repository = "https://github.com/seikichi/htmldiff"
+readme = "README.md"
+keywords = ["html", "diff"]
+license = "MIT"
+
+[badges]
+travis-ci = { repository = "seikichi/htmldiff" }
+appveyor = { repository = "seikichi/htmldiff" }
 
 [dependencies]
